src/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

.root {
  background: rgb(52, 5, 93);
  background: -moz-linear-gradient(
    90deg,
    rgba(52, 5, 93, 1) 0%,
    rgba(69, 13, 92, 1) 26%,
    rgba(77, 15, 94, 1) 45%,
    rgba(107, 19, 88, 1) 75%,
    rgba(89, 18, 97, 1) 100%
  );
  background: -webkit-linear-gradient(
    90deg,
    rgba(52, 5, 93, 1) 0%,
    rgba(69, 13, 92, 1) 26%,
    rgba(77, 15, 94, 1) 45%,
    rgba(107, 19, 88, 1) 75%,
    rgba(89, 18, 97, 1) 100%
  );
  background: linear-gradient(
    90deg,
    rgba(52, 5, 93, 1) 0%,
    rgba(69, 13, 92, 1) 26%,
    rgba(77, 15, 94, 1) 45%,
    rgba(107, 19, 88, 1) 75%,
    rgba(89, 18, 97, 1) 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#34055d",endColorstr="#591261",GradientType=1);
  font-family: 'Inter', sans-serif;
}

.container {
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-columns: 3fr 1.3fr;
  grid-template-rows: 0fr 1fr 0fr;
  grid-template-areas:
    'nv nv'
    'mn mn' /* mn fl */
    'ft ft';
}

.container nav {
  height: 60px;
  grid-area: nv;
  display: flex;
  justify-content: space-between;
  color: white;
  font-weight: 500;
}

.container main {
  grid-area: mn;
}
.container .calendar {
  /* background-color: yellow; */
  background-color: rgba(255, 255, 255, 0.1);
  grid-area: cl;
}
.container footer {
  grid-area: ft;
  height: 50px;
}
.container nav .navbar-left {
  width: 100px;
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
}
.container nav .navbar-middle {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.9rem;
}
.container nav .navbar-middle > * {
  padding: 0 20px;
  display: flex;
  gap: 10px;
  height: 100%;
  align-items: center;
  cursor: pointer;
  transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 500ms;
}
.container nav .navbar-middle > *:hover {
  box-shadow: 0 3px 0 #ff5761 inset;
}

.container nav .navbar-right {
  width: 260px;
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  padding: 0 20px;
}
.container nav .navbar-right .notification {
  cursor: pointer;
}

.container nav .navbar-right .profile {
  display: flex;
  align-items: center;
  gap: 20px;
  cursor: pointer;
  line-height: 20px;
  height: 50px;
  padding: 0 10px;
  border-radius: 10px;
  transition: all 0.2s ease-in-out;
}
.container nav .navbar-right .profile:hover {
  background-color: rgba(255, 255, 255, 0.1);
}
/* .container nav .navbar-right .profile .profile-info .name {

} */
.container nav .navbar-right .profile .profile-info .role {
  font-weight: 200;
  font-size: 0.9rem;
}
.container nav .navbar-right img {
  width: 36px;
  height: 36px;
  border-radius: 50%;
  border: 0.5px white solid;
  background-image: url('./img/pp.jpe');
}

#board {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-rows: 0fr 0fr 1fr;
  background-color: rgba(255, 255, 255, 0.1);
  font-family: 'Inter', sans-serif;
}

#board #project {
  width: 100%;
  height: 100px;
}
#board #project #projectContent {
  color: white;
  display: flex;
  height: 100%;
  justify-content: space-between;
  align-items: center;
  margin: 0 20px;
}
#board #project #projectContent #title,
#board #project #projectContent #somethingTitle {
  font-size: 1.3rem;
  font-weight: 700;
}

#board #project #projectContent #rightSide {
  display: flex;
  gap: 30px;
  align-items: center;
}
#board #project #projectContent #rightSide button {
  background-color: rgba(255, 87, 97, 1);
  padding: 10px 15px;
  font-size: 0.9rem;
  color: white;
  font-weight: 600;
  border: none;
  border-radius: 10px;
  box-shadow: 0 5px 50px rgba(255, 87, 97, 0.4);
  cursor: pointer;
  transition: all 0.2s ease-in-out;
}
#board #project #projectContent #rightSide button:hover {
  background-color: rgba(255, 87, 97, 0.8);
}
#board #search {
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}
#board #search #searchContent {
  border-radius: 10px;
  background-color: #41106c;
  width: 100%;
  height: 80%;
  display: flex;
  margin: 0 20px;
  display: flex;
  align-items: center;
  gap: 30px;
  padding: 0 20px;
  color: white;
}
#board #search #searchContent .filters {
  display: flex;
  width: 200px;
  gap: 10px;
  align-items: center;
  justify-content: center;
  height: 5 0%;
  border-radius: 10px;
  padding: 10px 15px;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
}
#board #search #searchContent .filters:hover {
  background-color: rgba(255, 255, 255, 0.1);
}
#board #search #searchContent .filters .quickFilters {
  font-size: 0.9rem;
  font-weight: 400;
  color: rgb(172, 172, 172);
}
/* ... */

